syntax = "proto3";

package guru.qa.grpc.country;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "guru.qa.grpc.country";
option java_outer_classname = "CountryProto";

service CountryService {
  rpc AllCountries(google.protobuf.Empty) returns (CountryListResponse) {}
  rpc AddCountries(stream CountryRequest) returns (CountResponse) {}
  rpc UpdateCountry(CountryRequest) returns (CountryResponse) {}
}

message CountryRequest {
  string countryCode = 1;
  string countryName = 2;
}

message CountryResponse {
  string id = 1;
  string countryCode = 2;
  string countryName = 3;
}

message CountryListResponse {
  repeated CountryResponse countries = 1;
}

message CountResponse {
  uint32 count = 1;
}